[gd_scene load_steps=3 format=3 uid="uid://d0hi00w12830g"]

[ext_resource type="Script" uid="uid://bu6h70gv7jkv4" path="res://Additional Scenes/task_stat.gd" id="1_7y4mn"]

[sub_resource type="LabelSettings" id="LabelSettings_vj8sw"]
font_size = 12

[node name="TaskStat" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_7y4mn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 5
text = "   Memory: "
label_settings = SubResource("LabelSettings_vj8sw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MemoryScore" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 5
text = "NaN"
label_settings = SubResource("LabelSettings_vj8sw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 5
text = "Reaction: "
label_settings = SubResource("LabelSettings_vj8sw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReactionScore" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 5
text = "NaN"
label_settings = SubResource("LabelSettings_vj8sw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
alignment = 1

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 5
text = "   Focus and Attention: "
label_settings = SubResource("LabelSettings_vj8sw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="FandAScore" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 5
text = "NaN"
label_settings = SubResource("LabelSettings_vj8sw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 5
text = "   Decision: "
label_settings = SubResource("LabelSettings_vj8sw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="DecisionScore" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 5
text = "NaN"
label_settings = SubResource("LabelSettings_vj8sw")
horizontal_alignment = 1
vertical_alignment = 1
